--- a/copper-2022/copper-2022.ipynb
+++ b/copper-2022/copper-2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "af105b2a",
+   "id": "11d1ecef",
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -37,8 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "38887863",
+   "execution_count": 2,
+   "id": "bcb4a9cb",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "020918e4",
+   "id": "467d6118",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f633a0fa",
+   "id": "2fbd2361",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -75,7 +75,7 @@
     "\n",
     "### Model Equations\n",
     "\n",
-    "* Neo-Hookean at hyperelasticity at finite strain\n",
+    "* Neo-Hookean hyperelasticity at finite strain\n",
     "* Initial vs Current Configuration\n",
     "\n",
     "### Matrix Free FE\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ed4ac03",
+   "id": "c0854f54",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -103,26 +103,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "225f35ac",
+   "id": "d5cc5ce5",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "# Why Matrix Free ?\n",
-    "<img src=\"flop-per-byte-dp-2022.svg\" width=\"50%\" height=\"40%\" align=\"bottom\">\n",
-    "\n",
-    "* Modern hardware does 10 flops per byte.\n",
-    "\n",
-    "* Matrix-free methods store and move less data, compute faster.\n",
-    "\n",
-    "* Assembled matrices need at least 4 bytes transferred per flop."
+    "# Why Matrix Free ?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ab70e76e",
+   "id": "49bba9c3",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "<img src=\"flop-per-byte-dp-2022.svg\" width=\"100%\" height=\"40%\" align=\"bottom\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a59214d",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "* Modern hardware does 10 flops per byte.\n",
+    "* Matrix-free methods store and move less data, compute faster.\n",
+    "* The Jacobian of a non-linear operator rapidly loses the sparsity and the number of nonzero entries per dof grows with $p^d$ as the order $p$ of basis function increases in $d$ dimension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc5240f1",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -134,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "560b860f",
+   "id": "addd5dfa",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -174,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20d7bf22",
+   "id": "028da140",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -187,7 +208,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c78ce75f",
+   "id": "6e4f375b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img align=\"center\" src=\"op_schematic.svg\" width=\"80%\" height=\"30%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "361fde5d",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -200,24 +233,47 @@
     "    v^T F(u) \\sim \\int_\\Omega v \\cdot \\color{olive}{f_0(u, \\nabla u)} + \\nabla v \\!:\\! \\color{olive}{f_1(u, \\nabla u)} \\quad\n",
     "    v^T J du \\sim \\int_\\Omega \\begin{bmatrix} v \\\\ \\nabla v \\end{bmatrix}^T \\color{teal}{\\begin{bmatrix} f_{0,0} & f_{0,1} \\\\ f_{1,0} & f_{1,1} \\end{bmatrix}}\n",
     "    \\begin{bmatrix} du \\\\ \\nabla du \\end{bmatrix} \\\\\n",
-    "\\end{gather*}\n",
-    "\n",
-    "### [libCEED](https://libceed.readthedocs.io): Efficient Extensible Discretization\n",
-    "\n",
-    "<img align=\"center\" src=\"libCEEDAPI.png\" width=\"50%\" height=\"30%\"/>\n",
-    "\n",
-    "* <font color='red'>$\\mathcal P$</font>: Process decomposition,\n",
-    "\n",
-    "* $\\mathcal E$</font> : Element restriction,\n",
-    "\n",
-    "* <font color='blue'>$B$</font> : Basis (DoFs-to-Qpts) evaluator, \n",
-    "\n",
-    "* <font color='green'>$D$</font> : Operator at quadrature point \n"
+    "\\end{gather*}\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "21f09f2e",
+   "id": "3fccff5c",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "\n",
+    "### [libCEED](https://libceed.readthedocs.io): Efficient Extensible Discretization\n",
+    "\n",
+    "<img align=\"center\" src=\"libCEEDAPI.png\" width=\"100%\" height=\"30%\"/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92ce3427",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "* <font color='red'>$\\mathcal P$</font>: Process decomposition,\n",
+    "\n",
+    "* $\\mathcal E$</font> : Element restriction/assembly operator\n",
+    "\n",
+    "* <font color='blue'>$B$</font> : Basis (DoFs-to-Qpts) evaluator, \n",
+    "\n",
+    "* <font color='green'>$D$</font> : Operator at quadrature point- Qfunction ($f_0, f_1, f_{0,0},...$)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79a2fe98",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -229,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "954a5033",
+   "id": "1940b981",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -237,24 +293,21 @@
     }
    },
    "source": [
-    "* Backend plugins with run-time selection\n",
-    "  * debug and optimized built-in backends\n",
-    "  * libxsmm\n",
-    "  * CUDA (with and without NVRTC)\n",
-    "  * MAGMA to CUDA and HIP\n",
-    "  * OCCA to OpenMP, OpenCL, CUDA, and HIP\n",
     "* Single source vanilla C for QFunctions\n",
-    "  * Easy to debug and understand locally\n",
-    "* 2-clause BSD, Python interface\n",
-    "* Available via MFEM, PETSc, and Nek5000\n",
     "\n",
+    "* Backend plugins with run-time selection\n",
+    "    * e.g., `./bps -ceed /gpu/cuda`\n",
     "\n",
-    "Thanks to many developers, including Jeremy Thompson, Yohann Dudouit, Natalie Beams, Valeria Barra, Leila Ghaffari, Tzanio Kolev, Veselin Dobrev, David Medina"
+    "* Same source code can call multiple CEEDs with different backends\n",
+    "\n",
+    "* Open source (BSD-2 license) C library with Fortran, Python, Julia, and Rust interfaces\n",
+    "\n",
+    "* Available via MFEM, PETSc, Nek5000"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "939588e8",
+   "id": "94fc9019",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -262,12 +315,12 @@
     }
    },
    "source": [
-    "<img align=\"center\" src=\"libCEEDBackends.png\" width=\"100%\" height=\"100%\"/>"
+    "<img align=\"center\" src=\"libCEEDBackends.png\" width=\"100%\" height=\"100%\"/>\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "486431a6",
+   "id": "2ac10a90",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -279,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b6103d1",
+   "id": "5f2a8e79",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -294,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d54b987e",
+   "id": "f201b455",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -302,41 +355,136 @@
     }
    },
    "source": [
-    "* P-Multigrid V-Cycle\n",
-    "* 2nd order Chebyshev/Jacobi iteration in the range $[0.1\\lambda_{max}, 1.1\\lambda_max]$\n",
+    "* 2nd order Chebyshev/Jacobi iteration in the range $[0.1\\lambda_{max}, 1.1\\lambda_{max}]$\n",
     "* $\\lambda_{max}$ estimate eigenvalue of $\\left(\\text{diag}\\boldsymbol{A}_f \\right)^{-1}\\boldsymbol{A}_f$\n",
-    "<img align=\"center\" src=\"p-multigrid-cycle.png\" width=\"100%\" height=\"100%\"/>\n"
+    "* AMG use only information of the matrix sparsity and its entries of the assembled operators\n",
+    "<img align=\"center\" src=\"p-multigrid-cycle.png\" width=\"80%\" height=\"100%\"/>\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "be82716d",
+   "id": "0eb73165",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "# Assembled vs Matrix Free\n",
+    "# Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "528ff4db",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "* Schwarz Primitive mesh, left wall fixed, thickness 0.2 and 0.05, $Q_1, Q_2, Q_3$ elements \n",
+    "<img align=\"center\" src=\"schwarz-mesh.png\" width=\"70%\" height=\"70%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94ed3e75",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "<img align=\"center\" src=\"HPC-machine.png\" width=\"100%\" height=\"100%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "035caf44",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Assembled vs Matrix-Free on Lassen machine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ea5497a",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "<img align=\"center\" src=\"assemble-vs-matrixfree.png\" width=\"100%\" height=\"100%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37f601cc",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "* Matrix-free becomes more efficient as the order increases\n",
     "\n",
-    "<img align=\"center\" src=\"assemble-vs-matrixfree.png\" width=\"80%\" height=\"60%\"/>\n"
+    "* Both are latency-limited for smaller problem size (left side of figure)\n",
+    "\n",
+    "* Even for linear element, efficiency of matrix-free grows as DoFs increases"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1c0dd4b5",
+   "id": "0d402df3",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "<img align=\"center\" src=\"preconditioner.png\" width=\"80%\" height=\"60%\"/>\n"
+    "# Total nonlinear solve efficiency on different machines"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a17e4021",
+   "id": "65d644c8",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "<img align=\"center\" src=\"snessolve-Q3.png\" width=\"100%\" height=\"100%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36fa3450",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "* $Q_3$ elements using matrix-free\n",
+    "* Newton-Krylov with p-MG preconditioning and Boomer-AMG coarse solve\n",
+    "* For example in 10 seconds total time, we can solve 0.6 MDoFs/s/GPU on Perlmutter, so the target problem would be scaled to about 6 MDoFs/GPU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15e23bf6",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -348,8 +496,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "2646c942",
+   "execution_count": 15,
+   "id": "de073a50",
    "metadata": {},
    "outputs": [
     {
@@ -357,8 +505,8 @@
       "text/html": [
        "\n",
        "        <iframe\n",
-       "            width=\"1600\"\n",
-       "            height=\"400\"\n",
+       "            width=\"2000\"\n",
+       "            height=\"200\"\n",
        "            src=\"schwarz-q2-cuda-flame.svg\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
@@ -366,33 +514,45 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f31f42ab510>"
+       "<IPython.lib.display.IFrame at 0x7f4bb4403510>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "IFrame(\"schwarz-q2-cuda-flame.svg\", width=\"1600\", height=\"400\")"
+    "IFrame(\"schwarz-q2-cuda-flame.svg\", width=\"2000\", height=\"200\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8bceb352",
+   "id": "889d7d69",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "# high-order FE in engineering tolarance"
+    "<img align=\"center\" src=\"preconditioner.png\" width=\"80%\" height=\"60%\"/>\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0bbc839c",
+   "id": "84d8fd82",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# high-order FE in engineering problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f295b07",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -411,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e601e9c",
+   "id": "33c5dcf1",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -424,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7143940",
+   "id": "8fcb2b55",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -436,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e662a80",
+   "id": "56de98f0",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -454,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "821b2b87",
+   "id": "4eec441b",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -466,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8ff5e10",
+   "id": "fef5b7a9",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -481,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fccb7d6",
+   "id": "a650c794",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
